--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+asgiref==3.7.2
 attrs==23.1.0
 blis==0.7.10
 catalogue==2.0.9
@@ -6,6 +7,8 @@ charset-normalizer==3.2.0
 click==8.1.6
 confection==0.1.0
 cymem==2.0.7
+Django==4.2.4
+djangorestframework==3.14.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl
 exceptiongroup==1.1.2
 h11==0.14.0
@@ -22,6 +25,7 @@ preshed==3.0.8
 pydantic==1.10.12
 PySocks==1.7.1
 python-dotenv==1.0.0
+pytz==2023.3
 requests==2.31.0
 selenium==4.10.0
 smart-open==6.3.0
@@ -30,6 +34,7 @@ sortedcontainers==2.4.0
 spacy==3.6.0
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
+sqlparse==0.4.4
 srsly==2.4.7
 thinc==8.1.10
 tqdm==4.65.0
