--- a/oshigoto/package.json
+++ b/oshigoto/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "pinia": "^2.1.4",
     "vue": "^3.3.4"
