--- a/oshigotoapi/requirements.txt
+++ b/oshigotoapi/requirements.txt
@@ -1,3 +1,4 @@
+adrf==0.1.1
 asgiref==3.7.2
 attrs==23.1.0
 blis==0.7.10
@@ -8,6 +9,7 @@ click==8.1.6
 confection==0.1.0
 cymem==2.0.7
 Django==4.2.4
+django-cors-headers==4.2.0
 djangorestframework==3.14.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl
 exceptiongroup==1.1.2
