--- a/oshigoto/Dockerfile
+++ b/oshigoto/Dockerfile
@@ -1,22 +1,30 @@
-FROM node:lts-alpine
+FROM node:20-alpine as builder
 
-# install simple http server for serving static content
-RUN npm install -g http-server
+WORKDIR /ui
 
-# make the 'app' folder the current working directory
-WORKDIR /app
-
-# copy both 'package.json' and 'package-lock.json' (if available)
+# Copy the package.json and install dependencies
 COPY package*.json ./
-
-# install project dependencies
 RUN npm install
 
-# copy project files and folders to the current working directory (i.e. 'app' folder)
+# Copy rest of the files
 COPY . .
 
-# build app for production with minification
+# Build the project
 RUN npm run build
 
-EXPOSE 8080
-CMD [ "http-server", "dist" ]
+
+FROM nginx:alpine as production-build
+COPY ./.nginx/nginx.conf /etc/nginx/nginx.conf
+
+## Remove default nginx index page
+RUN rm -rf /usr/share/nginx/html/*
+
+# Copy from stage 1
+COPY --from=builder /ui/dist /usr/share/nginx/html
+
+# run the entrypoint script to inject environment variables
+COPY ./entrypoint.sh /entrypoint.sh
+
+# Grant Linux permissions and run entrypoint script
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
