--- a/oshigotoapi/Dockerfile
+++ b/oshigotoapi/Dockerfile
@@ -1,10 +1,17 @@
 FROM python:3
 WORKDIR /app
 
+
+# install google chrome
+# Check available versions here: https://www.ubuntuupdates.org/package/google_chrome/stable/main/base/google-chrome-stable
+ARG CHROME_VERSION="114.0.5735.90-1"
+RUN wget --no-verbose -O /tmp/chrome.deb https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_${CHROME_VERSION}_amd64.deb
+RUN apt-get -y update
+RUN apt-get install -y /tmp/chrome.deb
+RUN rm /tmp/chrome.deb
+
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
-RUN apt-get update
-RUN apt-get install -y chromium driver
 
 COPY . .
 CMD ["python", "./manage.py", "runserver"]
