--- a/oshigotoapi/Dockerfile
+++ b/oshigotoapi/Dockerfile
@@ -14,4 +14,4 @@ COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
-CMD ["python", "./manage.py", "runserver"]
+CMD ["python", "./manage.py", "runserver", "0.0.0.0:8000"]
